<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="10dp">

    <LinearLayout
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="13dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imgHome"
            app:srcCompat="@drawable/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:scaleType="centerInside"
            android:src="@drawable/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/lblShowHelpVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/btn_content_by"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#0000ff"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnEvaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:drawableStart="@android:drawable/ic_menu_slideshow"
                    android:background="@drawable/button_background"
                    android:text="@string/btn_training" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnSetting"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_background"
                    android:drawableStart="@android:drawable/ic_menu_preferences"
                    android:text="@string/btn_setting" />

                <Button
                    android:id="@+id/btnAbout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_background"
                    android:drawableStart="@android:drawable/ic_dialog_info"
                    android:text="@string/btn_about" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/home_developed_by"
            android:textAlignment="center"
            android:textColor="#000000" />

    </LinearLayout>

</RelativeLayout>
