<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:id="@+id/listViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/Result_lblTotalQuestions"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/lblTotalQuestions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/firstLayout"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/Result_lblCorrectQuestions"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/lblCorrectQuestions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/secondLayout"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/Result_lblIncorrectQuestions"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/lblIncorrectQuestions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lstQuestion"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/listViewResult"
        android:layout_weight="0.5" />

</RelativeLayout>